[gd_scene load_steps=11 format=2]

[ext_resource path="res://Levels/Boards/Sections/Crystal/crystal.gd" type="Script" id=1]
[ext_resource path="res://Levels/Boards/Sections/Crystal/crystal.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Levels/Boards/Sections/Crystal/crystal.material" type="Material" id=3]
[ext_resource path="res://Levels/Boards/Sections/Crystal/crystal_target.obj" type="ArrayMesh" id=4]
[ext_resource path="res://Levels/Boards/Sections/Crystal/Crystal_Target.material" type="Material" id=5]
[ext_resource path="res://Target_Controller/Target/Target.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/Power_Container/Power_Container.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/Action_Target/Action_Target.tscn" type="PackedScene" id=8]

[sub_resource type="ConvexPolygonShape" id=1]
points = PoolVector3Array( -0.348641, 0.30848, -0.00693, -0.287917, -0.43419, -0.00693, -0.045608, 0.474468, -0.259126, -0.051921, -0.467079, -0.179201, -0.045608, 0.474468, -0.259126, -0.051921, -0.467079, -0.179201, 0.281201, 0.356265, -0.217004, 0.173669, -0.514552, -0.152287, 0.364836, 0.068425, -0.00693, 0.293599, -0.602657, 0.055882, 0.261213, 0.244166, 0.292676, 0.212654, -0.483663, 0.277826, 0.040964, 0.217602, 0.424621, 0.021751, -0.59725, 0.29891, -0.208768, 0.056191, 0.309223, -0.151996, -0.491924, 0.224406, -0.151996, -0.491924, 0.224406, 0.021751, -0.59725, 0.29891, 0, -1, -0.00231, 0.281201, 0.356265, -0.217004, 0.364836, 0.068425, -0.00693, 0, 1, -0.00231, -0.208768, 0.056191, 0.309223, -0.348641, 0.30848, -0.00693, 0, 1, -0.00231, 0.261213, 0.244166, 0.292676, 0.040964, 0.217602, 0.424621, 0, 1, -0.00231, 0.173669, -0.514552, -0.152287, -0.051921, -0.467079, -0.179201, 0, -1, -0.00231, -0.051921, -0.467079, -0.179201, -0.287917, -0.43419, -0.00693, 0, -1, -0.00231, 0.212654, -0.483663, 0.277826, 0.293599, -0.602657, 0.055882, 0, -1, -0.00231, -0.045608, 0.474468, -0.259126, 0.281201, 0.356265, -0.217004, 0, 1, -0.00231, 0.040964, 0.217602, 0.424621, -0.208768, 0.056191, 0.309223, 0, 1, -0.00231, 0.021751, -0.59725, 0.29891, 0.212654, -0.483663, 0.277826, 0, -1, -0.00231, 0.261213, 0.244166, 0.292676, 0.212654, -0.483663, 0.277826, 0.040964, 0.217602, 0.424621, 0.021751, -0.59725, 0.29891, 0.293599, -0.602657, 0.055882, 0.173669, -0.514552, -0.152287, 0, -1, -0.00231, -0.287917, -0.43419, -0.00693, -0.151996, -0.491924, 0.224406, 0, -1, -0.00231, -0.348641, 0.30848, -0.00693, -0.045608, 0.474468, -0.259126, 0, 1, -0.00231, 0.364836, 0.068425, -0.00693, 0.261213, 0.244166, 0.292676, 0, 1, -0.00231, 0.281201, 0.356265, -0.217004, 0.173669, -0.514552, -0.152287, 0.364836, 0.068425, -0.00693, 0.293599, -0.602657, 0.055882, -0.208768, 0.056191, 0.309223, -0.151996, -0.491924, 0.224406, -0.348641, 0.30848, -0.00693, -0.287917, -0.43419, -0.00693 )

[sub_resource type="CapsuleShape" id=2]
radius = 0.487183

[node name="Crystal" type="Spatial"]
script = ExtResource( 1 )
rotation_speed = 0.3

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 1 )

[node name="Crystal_Mesh" type="MeshInstance" parent="StaticBody"]
mesh = ExtResource( 2 )
material/0 = ExtResource( 3 )

[node name="Crystal_Target_Mesh" type="MeshInstance" parent="."]
visible = false
mesh = ExtResource( 4 )
material/0 = ExtResource( 5 )

[node name="Area" type="Area" parent="."]
input_ray_pickable = true

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Target" parent="." instance=ExtResource( 6 )]

[node name="Power_Container" parent="." instance=ExtResource( 7 )]
max_total_capacity = 10

[node name="Action_Target" parent="." instance=ExtResource( 8 )]

[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_entered" from="Area" to="Target" method="_on_targeted"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
[connection signal="mouse_exited" from="Area" to="Target" method="_on_detargeted"]
[connection signal="detargeted" from="Target" to="." method="_on_Target_detargeted"]
[connection signal="filled" from="Power_Container" to="." method="_on_Power_Container_filled"]
